# learning

./: .gitgnore  decorators.py  scrape_data_btc.py
ML_from_scratch/: auto_grad.py  linear.py  regression.py  utils.py
cpp/: first  first.cpp  stack  stack.cpp
data_processing/: data.py
dsa/python/: array.py
langchain/agent/: main.py  pyproject.toml
python/: .gitignore  async.py  decorators.py  generator.py  tui.py
python/project/: main.py
rust/practice/src/: main.rs
rust/rust_rest_api/: Cargo.toml
rust/rust_rest_api/src/: main.rs
simple_cnn_tf/: onnx.py  train.py
